--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#679999</color>
+    <color name="colorPrimaryDark">#818181</color>
+    <color name="colorAccent">#f47b20</color>
+
+    <color name="orange">#f47b20</color>
+    <color name="dark_gray">#818181</color>
+    <color name="turquoise">#679999</color>
+    <color name="turquoise_light">#8FB3B3</color>
+    <color name="teal">#1abc9c</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+
 </resources>
