infinitely-scrolling recommendation list

--- a/app/src/main/res/layout/content_learn_more.xml
+++ b/app/src/main/res/layout/content_learn_more.xml
@@ -8,9 +8,10 @@
         android:layout_height="wrap_content"
         android:text="Subscribe To Newsletter"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Recommended"/>
+    <FrameLayout
+        android:id="@+id/flRecommended"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </FrameLayout>
 
 </LinearLayout>
