--- a/app/src/main/res/layout/content_learn_more.xml
+++ b/app/src/main/res/layout/content_learn_more.xml
@@ -4,14 +4,26 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/subscribe_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Subscribe To Newsletter"/>
+        android:text="@string/subscribe_title"
+        android:textAppearance="@style/TitleTextAppearance"
+        android:paddingBottom="10dp"/>
+
+    <TextView
+        android:id="@+id/recommendations_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/recommendations_title"
+        android:textAppearance="@style/TitleTextAppearance"
+        android:layout_below="@+id/subscribe_title"/>
 
     <FrameLayout
         android:id="@+id/flRecommended"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/recommendations_title">
     </FrameLayout>
 
 </LinearLayout>
