--- a/app/src/main/res/layout/content_services.xml
+++ b/app/src/main/res/layout/content_services.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/pro_bono_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pro-Bono Near You"/>
+        android:text="@string/pro_bono_title"
+        android:textAppearance="@style/TitleTextAppearance"
+        android:paddingBottom="10dp"/>
+
+    <TextView
+        android:id="@+id/events_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/events_title"
+        android:textAppearance="@style/TitleTextAppearance"
+        android:layout_below="@+id/pro_bono_title"/>
 
     <FrameLayout
         android:id="@+id/flEvents"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/events_title">
     </FrameLayout>
 
-</LinearLayout>
+</RelativeLayout>
