--- a/app/src/main/res/layout/content_services.xml
+++ b/app/src/main/res/layout/content_services.xml
@@ -9,7 +9,15 @@
         android:layout_height="wrap_content"
         android:text="@string/pro_bono_title"
         android:textAppearance="@style/TitleTextAppearance"
-        android:paddingBottom="10dp"/>
+        android:padding="10dp"/>
+
+    <FrameLayout
+        android:id="@+id/flMap"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_below="@+id/pro_bono_title">
+        <include layout="@layout/fragment_map"   />
+    </FrameLayout>
 
     <TextView
         android:id="@+id/events_title"
@@ -17,7 +25,8 @@
         android:layout_height="wrap_content"
         android:text="@string/events_title"
         android:textAppearance="@style/TitleTextAppearance"
-        android:layout_below="@+id/pro_bono_title"/>
+        android:layout_below="@+id/flMap"
+        android:padding="10dp"/>
 
     <FrameLayout
         android:id="@+id/flEvents"
