--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,11 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="edittext_horizontal_margin">10dp</dimen>
+    <dimen name="edittext_vertical_margin">60dp</dimen>
+    <dimen name="profile_edittext_height">50dp</dimen>
+
+    <dimen name="caption_textview_size">20dp</dimen>
+    <dimen name="title_size">30sp</dimen>
 </resources>
