--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -11,14 +11,14 @@
         android:layout_width="match_parent">
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="320dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:id="@+id/ivItemImage"
 
             tools:src="@drawable/card_dummy"
             android:adjustViewBounds="true"
-            android:scaleType="centerCrop"/>
+            android:scaleType="fitCenter"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
