--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             xmlns:tools="http://schemas.android.com/tools"
+             tools:context="org.ahomewithin.ahomewithin.activities.DetailActivity">
 
-    <WebView
-        android:id="@+id/webview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+    <com.malmstein.fenster.view.FensterVideoView
+        android:id="@+id/fvvVideo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:fitsSystemWindows="true"
+        android:keepScreenOn="true"/>
 
-</LinearLayout>
+    <com.malmstein.fenster.controller.MediaFensterPlayerController
+        android:id="@+id/fvMediaPlayerController"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/fvvVideo"
+        android:animateLayoutChanges="true"
+        android:fitsSystemWindows="true"/>
+
+</RelativeLayout>
