--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,7 @@
 
     <dimen name="caption_textview_size">20dp</dimen>
     <dimen name="title_size">30sp</dimen>
+
+    <dimen name="conv_text_big">22sp</dimen>
+    <dimen name="conv_text_regular">18sp</dimen>
 </resources>
