--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,20 +26,25 @@
 
     <style name="MapInfoWindow">
         <item name="android:layout_margin">@dimen/map_popup_margin</item>
-
-
     </style>
 
-    <style name="MapInfoWindow.Title">
+    <style name="MapInfoWindow.Title" parent="MapInfoWindow">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="MapInfoWindow.Body">
-        <item name="android:textStyle">italic</item>
-        <item name="android:textSize">14sp</item>
+    <style name="MapInfoWindow.Body" parent="MapInfoWindow">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/dark_gray</item>
+    </style>
+
+    <style name="MapInfoWindow.Button" parent="MapInfoWindow">
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@color/turquoise</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
