simple home page

--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -4,8 +4,19 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home Page"/>
+    <ImageView android:id="@+id/ivLibrary"
+        style="@style/HomePage.Image"
+        android:src="@mipmap/ic_launcher"
+        android:onClick="onSelectLibrary"/>
+
+    <ImageView android:id="@+id/ivNearYou"
+        style="@style/HomePage.Image"
+        android:src="@mipmap/ic_launcher"
+        android:onClick="onSelectNearYou" />
+
+
+    <ImageView android:id="@+id/ivToolsAndTechniques"
+        style="@style/HomePage.Image"
+        android:src="@mipmap/ic_launcher"
+        android:onClick="onSelectToolsAndTechniques" />
 </LinearLayout>
