--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,7 +70,19 @@
         <item name="android:textStyle">italic</item>
     </style>
 
+    <!-- Home application theme. -->
+    <style name="HomePage">
+        <item name="android:layout_margin">@dimen/map_popup_margin</item>
+    </style>
+    <style name="HomePage.Image" parent="HomePage">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:adjustViewBounds">true</item>
+    </style>
 
+    <!-- Map application theme. -->
     <style name="MapInfoWindow">
         <item name="android:layout_margin">@dimen/map_popup_margin</item>
     </style>
@@ -93,5 +105,6 @@
         <item name="android:background">@color/turquoise</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
 
 </resources>
