--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,22 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/black"
+            tools:context=".activities.MainActivity">
 
-    <ImageView android:id="@+id/ivLibrary"
-        style="@style/HomePage.Image"
-        android:src="@mipmap/ic_launcher"
-        android:onClick="onSelectLibrary"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:background="@android:color/white"
+                  android:orientation="vertical">
 
-    <ImageView android:id="@+id/ivNearYou"
-        style="@style/HomePage.Image"
-        android:src="@mipmap/ic_launcher"
-        android:onClick="onSelectNearYou" />
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                        xmlns:tools="http://schemas.android.com/tools"
+                        android:layout_width="match_parent"
+                        android:layout_height="160dp"
+                        android:onClick="onSelectNearYou">
 
 
-    <ImageView android:id="@+id/ivToolsAndTechniques"
-        style="@style/HomePage.Image"
-        android:src="@mipmap/ic_launcher"
-        android:onClick="onSelectToolsAndTechniques" />
-</LinearLayout>
+            <ImageView
+                android:id="@+id/ivMenuImageMap"
+                style="@style/home_menu_item_image"
+                android:src="@drawable/map_1"/>
+
+            <RelativeLayout
+                style="@style/home_menu_title_background">
+
+                <TextView
+                    android:id="@+id/menu_item_map_title"
+                    style="@style/home_menu_item_title"
+                    android:text="Near you"/>
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                        xmlns:tools="http://schemas.android.com/tools"
+                        android:layout_width="match_parent"
+                        android:layout_height="160dp"
+                        android:onClick="onSelectLibrary">
+
+
+            <ImageView
+                android:id="@+id/ivMenuImageLibrary"
+                style="@style/home_menu_item_image"
+                android:src="@drawable/library_1"/>
+
+            <RelativeLayout
+                style="@style/home_menu_title_background">
+
+                <TextView
+                    android:id="@+id/menu_item_library_title"
+                    style="@style/home_menu_item_title"
+                    android:text="My library"/>
+            </RelativeLayout>
+
+
+        </RelativeLayout>
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                        xmlns:tools="http://schemas.android.com/tools"
+                        android:layout_width="match_parent"
+                        android:layout_height="160dp"
+                        android:onClick="onSelectToolsAndTechniques">
+
+
+            <ImageView
+                android:id="@+id/ivMenuImageTools"
+                style="@style/home_menu_item_image"
+                android:src="@drawable/tools_1"/>
+
+            <RelativeLayout
+                style="@style/home_menu_title_background">
+
+                <TextView
+                    android:id="@+id/menu_item_tools_title"
+                    style="@style/home_menu_item_title"
+                    android:text="Tools and training"/>
+            </RelativeLayout>
+
+        </RelativeLayout>
+        </LinearLayout>
+</ScrollView>
