--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -10,26 +10,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activities.UserActivity">
 
-    <LinearLayout
-        android:id="@+id/llToolbar"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:orientation="vertical">
-
-        <include
-            layout="@layout/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
+        android:id="@+id/tvUserLoginAdvice"
+        android:layout_margin="30dp"
+        android:textSize="25sp"
+        android:gravity="center"
+        android:text="For a full experience, please Log in or Register"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"/>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/tilEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/llToolbar"
+        android:layout_below="@id/tvUserLoginAdvice"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:layout_marginTop="@dimen/activity_vertical_margin">
@@ -83,19 +79,21 @@
         android:id="@+id/btnJoin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:src="#f6e017"
         android:text="@string/create_new_account"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:layout_below="@+id/tvNoAccount"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:id="@+id/tvNoAccount"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:layout_above="@id/btnJoin"
-        android:layout_centerHorizontal="true"
         android:text="@string/no_account"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:layout_below="@+id/tvForgetPasswd"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="24dp"/>
 </RelativeLayout>
