--- a/app/src/main/res/layout/activity_chatroom.xml
+++ b/app/src/main/res/layout/activity_chatroom.xml
@@ -5,7 +5,7 @@
               android:orientation="vertical" >
 
     <ListView
-        android:id="@+id/list"
+        android:id="@+id/lvChat"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
     </ListView>
