--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.xxy.chatclient.ChatActivity">
+    tools:context="org.ahomewithin.ahomewithin.activities.ChatActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
