--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                               android:layout_width="match_parent"
-                               android:layout_height="match_parent"
-                               android:orientation="horizontal" >
-<ImageView
-    android:id="@+id/ivProfileOther"
-    android:layout_width="64dp"
-    android:layout_height="64dp"
-    android:src="@mipmap/ic_launcher" />
-<TextView
-    android:textSize="18sp"
-    android:id="@+id/tvBody"
-    android:padding="20dp"
-    android:lines="3"
-    android:layout_marginRight="64dp"
-    android:layout_width="match_parent"
-    android:layout_height="64dp">
-</TextView>
-<ImageView
-    android:id="@+id/ivProfileMe"
-    android:layout_marginLeft="-64dp"
-    android:layout_width="64dp"
-    android:layout_height="64dp"
-    android:src="@mipmap/ic_launcher" />
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/ivProfileOther"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:contentDescription="@string/profile_other"
+        android:src="@mipmap/ic_launcher"/>
+
+    <TextView
+        android:id="@+id/tvBody"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
+        android:lines="3"
+        android:padding="20dp"
+        android:textSize="18sp">
+    </TextView>
+
+    <ImageView
+        android:id="@+id/ivProfileMe"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginLeft="-64dp"
+        android:layout_marginStart="-64dp"
+        android:contentDescription="@string/profile_me"
+        android:src="@mipmap/ic_launcher"/>
 </LinearLayout>
