--- a/app/src/main/res/layout/content_map.xml
+++ b/app/src/main/res/layout/content_map.xml
@@ -15,11 +15,37 @@
         android:id="@+id/flMapContainer">
     </FrameLayout>
 
-    <TextView
+    <RelativeLayout
+        android:id="@+id/rlMapPopup"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center|top"
-        android:text="The Awesome Sliding Up Panel"
-        android:textSize="16sp"/>
+        android:layout_height="wrap_content"
+        style="@style/MapInfoWindow">
+
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:ellipsize="end"
+            android:singleLine="true"
+            style="@style/MapInfoWindow.Title"/>
+
+        <TextView
+            android:id="@+id/tvDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:layout_below="@+id/tvName"
+            style="@style/MapInfoWindow.Body" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnChat"
+            android:text="@string/start_chat"
+            android:layout_below="@+id/tvDescription"
+            style="@style/MapInfoWindow.Button"/>
+
+    </RelativeLayout>
 
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
