--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -94,6 +94,12 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="MapInfoWindow.Subtitle" parent="MapInfoWindow">
+        <item name="android:textStyle">italic</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
     <style name="MapInfoWindow.Body" parent="MapInfoWindow">
         <item name="android:textStyle">normal</item>
         <item name="android:textSize">16sp</item>
