--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -65,6 +65,8 @@
         android:layout_centerHorizontal="true"
         android:text="@string/login"/>
 
+
+
     <TextView
         android:id="@+id/tvForgetPasswd"
         android:layout_width="match_parent"
@@ -74,6 +76,17 @@
         android:layout_centerHorizontal="true"
         android:text="@string/forget_password"
         android:textAlignment="center"/>
+
+    <Button
+        android:id="@+id/btnLogout"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="@string/logout"
+        android:layout_below="@+id/btnJoin"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 
     <Button
         android:id="@+id/btnJoin"
