--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -35,7 +35,7 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="@string/your_profile"
-        android:textSize="@dimen/title_size"
+        android:textSize="@dimen/big_title_size"
         android:textStyle="bold"/>
 
     <TextView
