--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,7 @@
     <dimen name="profile_edittext_height">50dp</dimen>
 
     <dimen name="caption_textview_size">20dp</dimen>
-    <dimen name="title_size">30sp</dimen>
+    <dimen name="big_title_size">30sp</dimen>
 
     <dimen name="conv_text_big">20sp</dimen>
     <dimen name="conv_text_regular">16sp</dimen>
