--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <!--<item name="colorPrimaryLight">@color/colorPrimaryLight</item>-->
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textViewStyle">@style/AppTheme.Widget.TextView</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="AppTheme">
@@ -15,14 +16,25 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="fontPath">fonts/Roboto-LightItalic.ttf</item>
+    </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
+    <style name="AppTheme.Widget"/>
+
+    <style name="AppTheme.Widget.TextView" parent="android:Widget.Holo.Light.TextView">
+        <item name="fontPath">fonts/Roboto-BoldItalic.ttf</item>
+    </style>
 
     <style name="TitleTextAppearance">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
+
     </style>
 
     <style name="conv_card_title">
@@ -33,6 +45,8 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textSize">28sp</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
+
     </style>
 
     <style name="conv_card_header_titles">
@@ -41,6 +55,8 @@
         <item name="android:layout_weight">1</item>
         <item name="android:textAlignment">center</item>
         <item name="android:textSize">@dimen/conv_text_big</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
+
     </style>
 
     <style name="conv_card_section_title">
@@ -51,17 +67,23 @@
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">@dimen/conv_text_big</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
+
     </style>
 
     <style name="conv_card_sections_body">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/conv_text_regular</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
+
     </style>
 
     <style name="conv_card_quote_body">
         <item name="android:textStyle">italic</item>
         <item name="android:textSize">@dimen/conv_text_big</item>
+        <item name="fontPath">fonts/Roboto-LightItalic.ttf</item>
+
     </style>
 
     <style name="conv_card_quote_author">
@@ -69,6 +91,8 @@
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:textSize">@dimen/conv_text_regular</item>
         <item name="android:textStyle">italic</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
+
     </style>
 
     <!-- Home application theme. -->
@@ -131,6 +155,8 @@
         <item name="android:layout_marginBottom">10dp</item>
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_alignParentBottom">true</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
+
     </style>
 
     <style name="home_menu_title_background">
@@ -149,6 +175,8 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:layout_alignParentLeft">true</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
+
     </style>
 
     <style name="detail_description">
@@ -157,6 +185,8 @@
         <item name="android:textColor">#455a64</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
+
     </style>
 
 
