--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -110,29 +110,26 @@
 
     <!-- Map application theme. -->
     <style name="MapInfoWindow">
-        <item name="android:layout_margin">@dimen/map_popup_margin</item>
+        <item name="android:padding">@dimen/map_popup_margin</item>
+        <item name="android:background">@color/material_drawer_dark_background</item>
     </style>
 
-    <style name="MapInfoWindow.Title" parent="MapInfoWindow">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">24sp</item>
-        <item name="android:textColor">@color/colorPrimary</item>
+    <style name="MapInfoWindow.Title" parent="conv_card_section_title">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
 
-    <style name="MapInfoWindow.Subtitle" parent="MapInfoWindow">
-        <item name="android:textStyle">italic</item>
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/colorPrimary</item>
+    <style name="MapInfoWindow.Subtitle" parent="conv_card_quote_body">
+        <item name="android:textSize">@dimen/conv_text_regular</item>
     </style>
 
-    <style name="MapInfoWindow.Body" parent="MapInfoWindow">
-        <item name="android:textStyle">normal</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/colorPrimary</item>
+    <style name="MapInfoWindow.Body" parent="conv_card_sections_body">
+        <item name="android:paddingTop">20dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
     </style>
 
     <style name="MapInfoWindow.Button" parent="MapInfoWindow">
-        <item name="android:layout_margin">10dp</item>
         <item name="android:padding">10dp</item>
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:textColor">@color/colorTextIcons</item>
