--- a/app/src/main/res/layout/item_recommended.xml
+++ b/app/src/main/res/layout/item_recommended.xml
@@ -11,32 +11,22 @@
         android:id="@+id/ivImageType"
         android:contentDescription="@string/type"/>
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/ivThumbnail"
-        android:contentDescription="@string/thumbnail"/>
-
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="2"
         android:id="@+id/tvTitle"
-        style="@style/RecommendedText"
+        style="@style/RecommendedText.Title"
         android:padding="10dp"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="3"
         android:id="@+id/tvSummary"
-        style="@style/RecommendedText"
+        style="@style/RecommendedText.Body"
         android:padding="10dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvPublishDate"
-        style="@style/RecommendedText"
-        android:padding="10dp"/>
 
 </LinearLayout>
 
